fixed bug where left and right page elements overlapped each other at certain screen sizes. also cleaned up the photos section so its more flexible based on screen size

--- a/ip_styles.css
+++ b/ip_styles.css
@@ -210,16 +210,31 @@ body {
 /* Styles created for the detail page formatting */
 .photos-section {
     position: relative;
-    width: 350px;
-    height: 500px;
+    width: 100%; /* Take full width of the parent */
+    padding-top: 75%; /* 4:3 aspect ratio; Adjust as needed */
+    background-color: #333; /* Or any color you desire for side fillers */
+    overflow: hidden; /* Keeps the content of the box within its boundaries */
 }
 
+/* General styles */
 .photos-section img {
-    width: 100%;
-    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%; 
+    height: 100%; 
+    object-position: center;  
+}
+
+/* Landscape */
+.photos-section img.landscape {
     object-fit: cover;
-    object-position: top left;  /* Ensures cropping starts from top left */
-    display: block;
+}
+
+/* Portrait */
+.photos-section img.portrait {
+    object-fit: contain;
+    background-color: #333; /* or any other color you prefer for the fill */
 }
 
 .photo-nav {
@@ -312,7 +327,7 @@ body {
 
 #investment-summary-cashflow {
     width: 100%;
-    max-width: 300px;
+    max-width: 400px;
     border-collapse: collapse;
     /* Removing margin for left alignment */
 }
@@ -334,20 +349,9 @@ body {
     text-align: right;
 }
 
-.input-light-blue {
-    background-color: #f4faff;
-    border: none; /* Removes border */
-    text-align: right; /* Aligns text to the right */
-    font-family: inherit; /* Ensures the font is the same as the parent/container */
-    width: 100%; /* Makes the input take the full width of its container */
-    box-sizing: border-box; /* Ensures padding and border (if any) do not increase the width */
-    padding: 3px 5px; /* Adds some padding */
-    outline: none; /* Removes focus outline, but be cautious about accessibility concerns */
-}
-
 .investment-summary-cashflow {
     width: 100%;
-    max-width: 300px;
+    max-width: 400px;
     border-collapse: collapse;
     /* Removing margin for left alignment */
 }
@@ -368,6 +372,17 @@ body {
 .investment-summary-cashflow tbody td:nth-child(2) {
     text-align: right;
     width: 100px;  /* or whatever width you want */
+}
+
+.input-light-blue {
+    background-color: #f4faff;
+    border: none; /* Removes border */
+    text-align: right; /* Aligns text to the right */
+    font-family: inherit; /* Ensures the font is the same as the parent/container */
+    width: 100%; /* Makes the input take the full width of its container */
+    box-sizing: border-box; /* Ensures padding and border (if any) do not increase the width */
+    padding: 3px 5px; /* Adds some padding */
+    outline: none; /* Removes focus outline, but be cautious about accessibility concerns */
 }
 
 .key-inputs-cashflow td:nth-child(2),
